# swipsi_backend

./: Cargo.toml  Dockerfile  Procfile  docker-compose.yml  init_db.sql  populate_db.sql  readme.md  reset_db.sh  upload_db.sh
src/: main.rs  main_tmp.rs  scrapper.rs
