[package]
name = "newbicycle_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono"] }
tokio = { version = "1.36", features = ["macros", "rt-multi-thread"] }
bigdecimal = "0.4"
thirtyfour = "0.35.0"
anyhow = "1.0"
csv = "1.3.1"
url = "2.5.4"
env_logger = "0.11.6"
